<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:contentDescription="@string/art_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/artNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/artistNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:layout_marginStart="8dp"
        android:text="@string/artist"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/artYearTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:layout_marginStart="8dp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />
</GridLayout>